!#2 update: settings docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@
 # https://docs.docker.com/compose/
 #
 # Usage: docker-compose up
-version: '2'
+version: '3'
 services:
 
   # PostgreSQL database
   db:
     restart: always
-    image: dgnest/postgres:9.4
+    image: dgnest/postgres:9.6
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -25,7 +25,7 @@ services:
   # Django web application
   web:
     restart: always
-    image: python:3.6.0
+    image: python:3.6.1
     build:
       context: .
       dockerfile: Dockerfile
@@ -36,24 +36,17 @@ services:
       - "80:8080"
       - "8080:5000"
     volumes_from:
-      - source_store
+      - ./:/app/
     environment: &environment
-      - DB_URL=postgres://postgres:postgres@db:5432/graphql
+      - DB_DEFAULT_URL=postgres://postgres:postgres@db:5432/graphql
       - DB_TEST_URL=postgres://postgres:postgres@db:5432/graphql_test
       - C_FORCE_ROOT=True
       - SITE_NAME=graphql
-      - MEDIA_URL=media/
       - IS_SECURE=True
       - DEBUG=True
       - SECRET_KEY=j36%5df7q5+ov)wz+(=vt7d81ka^xx!5%0)nx=z2i&)*5r^
       - STATIC_URL=static/
     env_file: .env
-
-
-  source_store:
-    image: busybox
-    volumes:
-      - ./:/app/
 
 volumes:
   pgvolume:
