--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -1,8 +1,9 @@
-FROM python:3.6.0
+FROM python:3.6.1
 
 MAINTAINER Luis Mayta <@slovacus>
 
-COPY . /app/
+COPY requirements.txt /app/requirements.txt
+COPY requirements /app/requirements/
 
 # set working directory to /app/
 
