!#2 Add: package zsh to dockerfile

--- a/docker/web/Dockerfile
+++ b/docker/web/Dockerfile
@@ -5,6 +5,9 @@ MAINTAINER Luis Mayta <@slovacus>
 COPY requirements.txt /app/requirements.txt
 COPY requirements /app/requirements/
 
+RUN apt-get update \
+  && apt-get install -y zsh
+
 # set working directory to /app/
 
 WORKDIR /app/
